<?xml version="1.0"?>
<package format="2">
  <name>robucar_base</name>
  <version>0.1.0</version>
  <description>Robosoft robucar driver</description>

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>

  <license>GPLv3</license>

  <!--<url type="website">http://ros.org/wiki/robucar_base</url>-->
  <url type="bugtracker">https://github.com/romea/robucar/issues</url>
  <url type="repository">https://github.com/romea/robucar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>control_toolbox</depend>

  <export></export>
</package>
