<?xml version="1.0"?>
<package format="2">
  <name>robucar_bringup</name>
  <version>0.1.0</version>
  <description>The robucar_bringup package</description>

  <author email="vincentrou@gmail.com">Vincent Rousseau</author>

  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/robucar_bringup</url> -->

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend>robucar_base</depend>
  <depend>robucar_control</depend>
  <depend>robucar_description</depend>-->
  <!--<depend>o3m151_driver</depend>-->
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  <depend>interactive_marker_twist_server</depend>
  <depend>controller_manager</depend>
  <depend>control_toolbox</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>
  <depend>laser_proc</depend>
  <depend>nmea_comms</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>robot_localization</depend>

</package>
