<?xml version="1.0"?>
<package format="2">
  <name>robucar_control</name>
  <version>0.1.0</version>
  <description>Robucar controller configurations</description>

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>

  <license>GPLv3</license>

  <!--<url type="website">http://ros.org/wiki/robucar_control</url>-->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_marker_twist_server</depend>
  <depend>ackermann_controller</depend>
  <depend>four_wheel_steering_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>rostopic</depend>
  <depend>controller_manager</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>twist_mux</depend>

  <export>
  </export>
</package>
