<?xml version="1.0"?>
<package format="2">
  <name>robucar_description</name>
  <version>0.0.0</version>
  <description>The robucar_description package</description>

  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/robucar_description</url> -->

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>

  <export>
  </export>
</package>
